KVH/mykvh/Email-to-anything/objects/Recent_Item_Regex__c.object
<CustomObject>
    <fields>
        <fullName>Case_insensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case insensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dot_matches_newline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dot matches newline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RecentItemRegexs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match_across_newlines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match across newlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_string__c</fullName>
        <label>Match string</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match a string which contains</fullName>
                </value>
                <value>
                    <fullName>Match a string which starts with</fullName>
                </value>
                <value>
                    <fullName>Match a string which ends in</fullName>
                </value>
                <value>
                    <fullName>Match a string which starts and ends in</fullName>
                </value>
                <value>
                    <fullName>Match a string that comes after</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recent Item Regex</label>
    <nameField>
        <label>Pattern</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Item Regexs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>